Refine api return
